--- a/mystyle.css
+++ b/mystyle.css
@@ -1,8 +1,7 @@
-h1{
+h1{p.fancy{
+color:#666; font-style: oblique;
+}
 background-color:#000;
 color:#fff;
 font-size:3em;
-}
-p.fancy{
-color:#666; font-style: oblique;
-}
+  }
