--- a/mystyle.css
+++ b/mystyle.css
@@ -1,10 +1,11 @@
 h1{ 
   font-size:100px; 
-  color:#fff; 
+  color:#B7E3EC; 
 }
 ul.nav li {
 display:inline;
   padding:10px
+width:50px
 }
 ul.nav li a{
 display:block
