--- a/mystyle.css
+++ b/mystyle.css
@@ -3,13 +3,17 @@ h1{
   color:#B7E3EC; 
 }
 ul.nav li{
-display:inline;
-  padding:10px
-width:50px
+  display:inline;
+  padding:10px;
+  width:50px;
 }
 ul.nav li a{
-display:inline-block
-  padding:10px
-backgroundcolor-#333;
-
+  display:inline-block;
+  padding:10px;
+  background-color:#333;
+  color:#fff
+  text-decoration:none;
+}
+ul.nav li a:hover{
+background-color:#000
 }
