--- a/mystyle.css
+++ b/mystyle.css
@@ -10,7 +10,7 @@ ul.nav li{
 ul.nav li a{
   display:inline-block;
   padding:10px;
-  background-color:#333;
+  background-color:#C9FDF7;
   color:#fff
   text-decoration:none;
 }
