--- a/mystyle.css
+++ b/mystyle.css
@@ -1,11 +1,11 @@
 h1{ 
   font-size:100px; 
-  color:#9672C5; 
+  color:#9976C4; 
   padding:1px;
 }
 h2{
   font-size:50px;
-  colour:#B48AEA
+  colour:#C476A1
   padding:1px;
 }
 ul.nav li{
