--- a/mystyle.css
+++ b/mystyle.css
@@ -3,9 +3,9 @@ h1{
   color:#9976C4; 
   padding:1px;
 }
-h2.nav{
+h2{
   font-size:50px;
-  colour:#C476A1
+  colour:#C476A1;
   padding:1px;
 }
 ul.nav li{
