--- a/mystyle.css
+++ b/mystyle.css
@@ -4,8 +4,8 @@ h1{
   padding:1px;
 }
 h2{
-  font-size:60px;
-  colour:#C476A1;
+  font-size:50px;
+  color:#C476A1;
   padding:1px;
 }
 ul.nav li{
