--- a/mystyle.css
+++ b/mystyle.css
@@ -1,12 +1,11 @@
 h1{ 
   font-size:100px; 
   color:#9976C4; 
-  padding:1px;
 }
 h2{
   font-size:50px;
   color:#C476A1;
-  padding:1px;
+  margin-top:-5px;
 }
 ul.nav li{
   display:inline;
