--- a/mystyle.css
+++ b/mystyle.css
@@ -18,6 +18,7 @@ ul.nav li a{
   display:inline-block;
   padding:10px;
   background-color:#B0C4DE;
+  text-align:center;
   color:#fff
   text-decoration:none;
 }
