--- a/mystyle.css
+++ b/mystyle.css
@@ -2,7 +2,7 @@ h1{
   font-size:100px; 
   color:#4682B4; 
   text-align:center;
-  p.ridge {border-style: ridge;}
+  border-style: ridge;
 }
 h2{
   font-size:50px;
@@ -17,8 +17,8 @@ ul.nav li{
 }
 ul.nav li a{
   display:inline-block;
-  padding:10px;
   text-align:center;
+  padding:10px;
   background-color:#B0C4DE;
   color:#fff
   text-decoration:none;
