--- a/hobbies.css
+++ b/hobbies.css
@@ -10,9 +10,9 @@ p1{
   margin-top:400px;
 }
 p2{
- font-size:40px; 
+ font-size:20px; 
   color:#4682B4; 
-  text-align:center;
+  float:right
 }
 
   
