--- a/Bentley.css
+++ b/Bentley.css
@@ -1,1 +1,12 @@
-bentley style
+h1{ 
+  font-size:100px; 
+  color:#4682B4; 
+  text-align:center;
+  border-style: groove;
+}
+h2{
+  font-size:50px;
+  color:#5F9EA0;
+  text-align:center;
+  margin-top:-65px;
+}
