--- a/Work.css
+++ b/Work.css
@@ -4,3 +4,9 @@ h1{
   text-align:center;
   border-style: groove;
 }
+h2{
+  font-size:50px;
+  color:#5F9EA0;
+  text-align:center;
+  margin-top:-65px;
+}
