--- a/Work.css
+++ b/Work.css
@@ -10,3 +10,18 @@ h2{
   text-align:center;
   margin-top:-65px;
 }
+<style>
+table, td, th {  
+  border: 1px solid #ddd;
+  text-align: left;
+}
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+th, td {
+  padding: 15px;
+}
+</style>
+</head>
+<body>
