--- a/Work.css
+++ b/Work.css
@@ -1,10 +1,10 @@
-h1{ 
+h{ 
   font-size:100px; 
   color:#4682B4; 
   text-align:center;
   border-style: groove;
 }
-h2{
+p{
   font-size:50px;
   color:#5F9EA0;
   text-align:center;
