--- a/Work.css
+++ b/Work.css
@@ -8,7 +8,7 @@ h2{
   font-size:50px;
   color:#5F9EA0;
   text-align:center;
-  margin-top: 300;
+  margin-top: 100px;
 }
 table{
   border-collapse: collapse;
