--- a/Work.css
+++ b/Work.css
@@ -10,6 +10,10 @@ h2{
   text-align:center;
   margin-top:-65px;
 }
+p2{
+  color:#4682B4; 
+  padding-bottom: 50px;
+}
 table{
   border-collapse: collapse;
   width: 100%;
