--- a/Work.css
+++ b/Work.css
@@ -11,9 +11,9 @@ h2{
   margin-top:-65px;
 }
 p2{
-  color:#4682B4; 
+  color:#304f50; 
   text-align:center;
-  padding-bottom: 50px;
+  padding-bottom:50px;
 }
 table{
   border-collapse: collapse;
