--- a/Work.css
+++ b/Work.css
@@ -13,7 +13,7 @@ h2{
 p2{
   color:#304f50; 
   text-align:center;
-  padding-bottom:300px;
+  padding-bottom:50%;
 }
 table{
   border-collapse: collapse;
