--- a/Work.css
+++ b/Work.css
@@ -23,8 +23,10 @@ table{
 th{
   padding: 15px;
   text-align: left;
+   border-bottom: 1px solid #ddd;
 }
 td{
   padding: 15px;
   text-align: left;
+   border-bottom: 1px solid #ddd;
 }
