--- a/Work.css
+++ b/Work.css
@@ -24,9 +24,11 @@ th{
   padding: 15px;
   text-align: left;
    border-bottom: 1px solid #ddd;
+  border-top: 1px solid #ddd;
 }
 td{
   padding: 15px;
   text-align: left;
    border-bottom: 1px solid #ddd;
+ border-top: 1px solid #ddd;
 }
