--- a/Work.css
+++ b/Work.css
@@ -19,16 +19,15 @@ p2{
 table{
   border-collapse: collapse;
   width: 100%;
+border: 1px solid #ddd;
 }
 th{
   padding: 15px;
   text-align: left;
    border-bottom: 1px solid #ddd;
-  border-top: 1px solid #ddd;
 }
 td{
   padding: 15px;
   text-align: left;
    border-bottom: 1px solid #ddd;
- border-top: 1px solid #ddd;
 }
