--- a/Work.css
+++ b/Work.css
@@ -24,10 +24,10 @@ border: 1px solid #ddd;
 th{
   padding: 15px;
   text-align: left;
-   border-bottom: 1px solid #ddd;
+   border: 1px solid #ddd;
 }
 td{
   padding: 15px;
   text-align: left;
-   border-bottom: 1px solid #ddd;
+   border: 1px solid #ddd;
 }
