--- a/Work.css
+++ b/Work.css
@@ -12,7 +12,7 @@ h2{
 }
 p2{
 font-size:30px;
-  width:700px;
+  width:900px;
   color:#304f50; 
   padding-bottom:50%;
   padding-top:50%;
@@ -22,12 +22,14 @@ table{
 border: 2px solid #5F9EA0;
 }
 th{
+font-size:15px;
 color:#4682B4;
   padding: 15px;
   text-align: center;
    border: 2px solid #5F9EA0;
 }
 td{
+font-size:9px;
   padding: 15px;
   text-align: left;
    border: 2px solid #5F9EA0;
