--- a/Work.css
+++ b/Work.css
@@ -19,15 +19,18 @@ font-size:30px;
 }
 table{
   width: 100%;
+  border: 1px solid black;
 }
 th{
 font-size:15px;
 color:#4682B4;
   padding: 15px;
   text-align: center;
+  border: 1px solid black;
 }
 td{
 font-size:9px;
   padding: 15px;
   text-align: left;
+  border: 1px solid black;
 }
