--- a/Work.css
+++ b/Work.css
@@ -12,7 +12,8 @@ h2{
 }
 p2{
 font-size:30px;
-  max-width:900px;
+  height: 100px;
+  width: 2%;
   color:#304f50; 
   padding-bottom:80%;
   padding-top:80%;
