--- a/Work.css
+++ b/Work.css
@@ -14,8 +14,8 @@ p{
 font-size:30px;
   width:100%;
   color:#304f50; 
-  padding-bottom:1%;
-  padding-top:1%;
+  padding-bottom:20px;
+  padding-top:20px;
 }
 table{
   width: 100%;
