--- a/Work.css
+++ b/Work.css
@@ -8,8 +8,7 @@ h2{
   font-size:50px;
   color:#5F9EA0;
   text-align:center;
-  padding-bottom: 1px;
-padding-top: 1px;
+  padding: 1px 1px 1px 1px;
 }
 p{
 font-size:30px;
