--- a/Work.css
+++ b/Work.css
@@ -25,11 +25,11 @@ font-size:25px;
 color:#4682B4;
   padding: 15px;
   text-align: center;
-  border: 1px solid black;
+  border: 1px #304f50;
 }
 td{
 font-size:20px;
   padding: 15px;
   text-align: left;
-border: 1px solid black;
+border: 1px #304f50;
 }
