--- a/Work.css
+++ b/Work.css
@@ -25,11 +25,12 @@ font-size:25px;
 color:#4682B4;
   padding: 15px;
   text-align: center;
-  border: 1px #304f50;
+  border: 1px #5F9EA0;
 }
 td{
 font-size:20px;
+  color: #304f50
   padding: 15px;
   text-align: left;
-border: 1px #304f50;
+border: 1px #5F9EA0;
 }
