--- a/Work.css
+++ b/Work.css
@@ -2,7 +2,7 @@ h1{
   font-size:100px; 
   color:#4682B4; 
   text-align:center;
-  border-style: groove;
+  border-style: solid;
 }
 h2{
   font-size:50px;
