--- a/hobbies.css
+++ b/hobbies.css
@@ -4,13 +4,8 @@ h1{
   border-style: inset;
   margin-bottom: 100px;
 }
-p1{
+h2{
   font-size:40px; 
   color:#4682B4; 
   margin-top:400px;
-}
-p2{
- font-size:20px; 
-  color:#4682B4; 
-  float:right
 }
