--- a/mystyle.css
+++ b/mystyle.css
@@ -26,6 +26,6 @@ font-size:30px;
 ul.nav li a:hover{
 background-color:#B7E3EC
 }
-<style>
-		body {background-color: black; color: white;}
-	</style>
+body{
+background-color:#e6ecf5;
+}
