--- a/mystyle.css
+++ b/mystyle.css
@@ -3,7 +3,7 @@ h1{
   color:#4682B4; 
   text-align:center;
   border-style: dashed;
-  background-colour:#F3F6FA;
+  background-color:#F3F6FA;
 }
 h2{
   font-size:50px;
