--- a/mystyle.css
+++ b/mystyle.css
@@ -1,6 +1,6 @@
 h1{ 
   font-size:100px; 
-  border-color:#4682B4; 
+  color:#4682B4; 
   text-align:center;
   border-style: dashed;
   background-color:#F3F6FA;
