--- a/Bentley.css
+++ b/Bentley.css
@@ -1,12 +1,13 @@
 h1{ 
   font-size:100px; 
-  color:#4682B4; 
+  color:#899BDD; 
   text-align:center;
   border-style: double;
+  background-color:#DBE1F4;
 }
 h2{
   font-size:50px;
-  color:#5F9EA0;
+  color:#A189DD;
   text-align:center;
   margin-top:-65px;
 }
