--- a/Bentley.css
+++ b/Bentley.css
@@ -7,7 +7,7 @@ h1{
   text-align:center;
   border-style: double;
   color: #8263CF; 
-  background-color: #DBE1F4;
+  background-color: #E0D8F3;
 }
 
 h2{
