--- a/Bentley.css
+++ b/Bentley.css
@@ -7,7 +7,7 @@ h1{
   text-align:center;
   border-style: double;
   color: #321e62; 
-  background-color: #E0D8F3;
+  background-color: #b19de1;
 }
 
 h2{
