--- a/mystyle.css
+++ b/mystyle.css
@@ -6,8 +6,8 @@ h1{
   font-size:100px; 
    text-align:center;
   border-style: dashed;
-  color: #4682B4;
-  background-color: #F0F6F6;
+  color: #297A75;
+  background-color: #5F9B98;
 }
 
 h2{
