--- a/mystyle.css
+++ b/mystyle.css
@@ -7,7 +7,7 @@ h1{
    text-align:center;
   border-style: dashed;
   color: #297A75;
-  background-color: #5F9B98;
+  background-color: #9BC1BF;
 }
 
 h2{
