--- a/mystyle.css
+++ b/mystyle.css
@@ -6,7 +6,7 @@ h1{
   font-size:100px; 
    text-align:center;
   border-style: dashed;
-  color: #255957;
+  color: #3f9288;
   background-color: #3d8f83;
 }
 
