--- a/mystyle.css
+++ b/mystyle.css
@@ -6,8 +6,8 @@ h1{
   font-size:100px; 
    text-align:center;
   border-style: dashed;
-  color: #3f9288;
-  background-color: #3d8f83;
+  color: #113244;
+  background-color: #70c2b6;
 }
 
 h2{
