--- a/mystyle.css
+++ b/mystyle.css
@@ -38,5 +38,9 @@ background-color:#8fd0ca;
 }
 
 img {
-  border-radius: 26%;
+  border-radius: 50%;
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
