--- a/mystyle.css
+++ b/mystyle.css
@@ -28,7 +28,7 @@ font-size:30px;
  text-align:center;
   display:inline-block;
   padding:10px;
-  background-color:#B0C4DE;
+  background-color:#5d886c;
   color:#fff
 }
 
