--- a/mystyle.css
+++ b/mystyle.css
@@ -38,10 +38,9 @@ background-color:#8fd0ca;
 }
 
 img {
-  float: right;
+  float: left;
   border-radius: 50%;
     display: block;
   margin-left: auto;
   margin-right: auto;
-  padding-right: 300px;
 }
