--- a/mystyle.css
+++ b/mystyle.css
@@ -37,7 +37,7 @@ ul.nav li a:hover{
 background-color:#8fd0ca;
 }
 
-img1 {
+imgage1 {
   float: left;
   border-radius: 50%;
     display: block;
@@ -45,7 +45,7 @@ img1 {
   margin-right: auto;
 }
 
-img2 {
+imgage2 {
   float: right;
   border-radius: 50%;
     display: block;
