--- a/mystyle.css
+++ b/mystyle.css
@@ -37,7 +37,15 @@ ul.nav li a:hover{
 background-color:#8fd0ca;
 }
 
-img {
+image1 {
+  float: left;
+  border-radius: 50%;
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+image2 {
   float: left;
   border-radius: 50%;
     display: block;
