--- a/Bentley.css
+++ b/Bentley.css
@@ -18,10 +18,22 @@ h2{
 }
 
 ol.nav li{
+  text-align:center;
   font-size:25px;
   color:#5C4598;
+  
+li {
+display: inline-block;
 }
 
 p{
 font-size:30px;
+}
+
+img {
+  float: right;
+  border-radius: 50%;
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
