--- a/Bentley.css
+++ b/Bentley.css
@@ -28,6 +28,10 @@ ol.nav li{
   text-align:left;
   font-size:25px;
   color:#5C4598;
+  display: inline-block;
+  margin-left: auto;
+  margin-right: auto;
+    }
 
   p{
 font-size:30px;
