--- a/Work.css
+++ b/Work.css
@@ -43,3 +43,10 @@ color:#304f50;
   border: 1px solid black;
   padding:15px;
 }
+
+img {
+  border-radius: 50%;
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
