--- a/Work.css
+++ b/Work.css
@@ -6,7 +6,7 @@ h1{
   font-size:100px; 
   text-align:center;
   border-style: dotted dashed solid double;
-  color: #25331a; 
+  color: #b3ca9b; 
   background-color: #334523;
 }
 
