--- a/hobbies.css
+++ b/hobbies.css
@@ -1,12 +1,14 @@
 body{
-  background-color:#EBF3F3;
+  background-color:#ffe6f0;
 }
 
 h1{ 
   font-size:100px; 
-  color:#4682B4; 
   text-align:center;
   border-style: solid;
+  color:#4682B4; 
+  background-color:#
+  
 }
 
 h2{
