--- a/hobbies.css
+++ b/hobbies.css
@@ -7,13 +7,13 @@ h1{
   text-align:center;
   border-style: solid;
   color:#4682B4; 
-  background-color:#
+  background-color:#99003d
   
 }
 
 h2{
   font-size:50px;
-  color:#5F9EA0;
+  color:#e6005c;
   text-align:center;
   margin-top:-65px;
 }
