--- a/hobbies.css
+++ b/hobbies.css
@@ -7,8 +7,7 @@ h1{
   text-align:center;
   border-style: solid;
   color:#4682B4; 
-  background-color:#99003d
-  
+  background-color:#99003d;
 }
 
 h2{
