--- a/hobbies.css
+++ b/hobbies.css
@@ -6,7 +6,7 @@ h1{
   font-size:100px; 
   text-align:center;
   border-style: solid;
-  color:#4682B4; 
+  color:#ff99c2; 
   background-color:#99003d;
 }
 
