--- a/mystyle.css
+++ b/mystyle.css
@@ -28,7 +28,7 @@ ul.nav li a{
 font-size:35px;
  text-align:center;
   display:inline-block;
-  padding:20px;
+  padding-top:20px;
   background-color:#5d886c;
   color:#FFF
 }
