--- a/mystyle.css
+++ b/mystyle.css
@@ -20,15 +20,14 @@ h2{
 ul.nav li{
   display:inline;
   width:10px;
-  padding-top:20px;
-  padding-bottom:20px;
+  padding:30px;
 }
 
 ul.nav li a{
 font-size:35px;
  text-align:center;
   display:inline-block;
-  padding-top:20px;
+  padding:10px;
   background-color:#5d886c;
   color:#FFF
 }
