--- a/mystyle.css
+++ b/mystyle.css
@@ -8,7 +8,7 @@ h1{
   border-style: dashed;
   color: #113244;
   background-color: #70c2b6;
-  text-shadow: 2px 2px 5px #000;
+  text-shadow: 2px 2px 5px #FFF;
 }
 
 h2{
