--- a/mystyle.css
+++ b/mystyle.css
@@ -9,6 +9,7 @@ h1{
   color: #113244;
   background-color: #70c2b6;
   text-shadow: 2px 2px 5px #FFF;
+  font-family: Impact, Charcoal, sans-serif;
 }
 
 h2{
