--- a/Work.css
+++ b/Work.css
@@ -8,7 +8,7 @@ h1{
   border-style: dotted dashed solid double;
   color: #b3ca9b; 
   background-color: #334523;
-  text-shadow: 2px 2px 5px #FFF;
+  text-shadow: 2px 2px 5px #000;
 }
 
 h2{
