--- a/hobbies.css
+++ b/hobbies.css
@@ -8,7 +8,7 @@ h1{
   border-style: solid;
   color:#ff99c2; 
   background-color:#99003d;
-  text-shadow: 2px 2px 5px #FFF;
+  text-shadow: 2px 2px 5px #000;
 }
 
 h2{
