--- a/hobbies.css
+++ b/hobbies.css
@@ -4,6 +4,7 @@ body{
 
 h1{ 
   font-size:100px; 
+  font-family: Arial, Helvetica, sans-serif;
   text-align:center;
   border-style: solid;
   color:#ff99c2; 
