--- a/hobbies.css
+++ b/hobbies.css
@@ -13,7 +13,8 @@ h1{
 }
 
 h2{
-  font-size:50px;
+  font-size:40px;
+  font-family: Arial, Helvetica, sans-serif;
   color:#e6005c;
   text-align:center;
   margin-top:-65px;
