--- a/Bentley.css
+++ b/Bentley.css
@@ -4,6 +4,7 @@ background-color: #E2DBF4;
 
 h1{  
   font-size:100px; 
+  font-family: "Lucida Console", Courier, monospace;
   text-align:center;
   border-style: double;
   color: #321e62; 
@@ -13,6 +14,7 @@ h1{
 
 h2{
   font-size:50px;
+  font-family: "Lucida Console", Courier, monospace;
   color:#452A89;
   text-align:center;
   margin-top:-65px;
