--- a/Bentley.css
+++ b/Bentley.css
@@ -3,7 +3,7 @@ background-color: #E2DBF4;
 }
 
 h1{  
-  font-size:100px; 
+  font-size:90px; 
   font-family: "Lucida Console", Courier, monospace;
   text-align:center;
   border-style: double;
@@ -13,7 +13,7 @@ h1{
 }
 
 h2{
-  font-size:50px;
+  font-size:40px;
   font-family: "Lucida Console", Courier, monospace;
   color:#452A89;
   text-align:center;
@@ -34,5 +34,6 @@ ol.nav li{
     }
 
   p{
-font-size:30px;
+font-size:20px;
+    font-family: "Lucida Console", Courier, monospace;
 }
