--- a/mystyle.css
+++ b/mystyle.css
@@ -28,7 +28,7 @@ ul.nav li{
   padding-right:30px;
 }
 
-#nav {
+nav {
 	list-style-type: none;
 	margin: 0;
 	padding: 50px;
@@ -39,6 +39,7 @@ ul.nav li{
 
 ul.nav li a{
 font-size:35px;
+font-family: Impact, Charcoal, sans-serif;
  text-align:center;
   display:inline-block;
   padding:10px;
