--- a/Work.css
+++ b/Work.css
@@ -19,7 +19,7 @@ h2{
   text-decoration: underline;
 }
 p{
-  text-align:center;
+  text-align:left;
 font-size:30px;
   width:100%;
   color:#304f50; 
