--- a/hobbies.css
+++ b/hobbies.css
@@ -8,7 +8,7 @@ h1{
   text-align:center;
   border-style: solid;
   color:#ff99c2; 
-  background-color:#99003d;
+  background-color:#5d796f;
   text-shadow: 2px 2px 5px #000;
 }
 
