--- a/Work.css
+++ b/Work.css
@@ -38,6 +38,7 @@ color:#334323;
   text-align: center;
   border: 1px solid black;
   padding:15px;
+  hover {background-color:#f5f5f5;}
 }
 
 td{
@@ -46,6 +47,7 @@ color:#304f50;
   text-align: left;
   border: 1px solid black;
   padding:15px;
+  hover {background-color:#f5f5f5;}
 }
 
 img {
