--- a/Work.css
+++ b/Work.css
@@ -6,7 +6,7 @@ h1{
   font-size:100px; 
   text-align:center;
   border-style: dotted dashed solid double;
-  color: #b3ca9b; 
+  color: #846c54; 
   background-color: #334523;
   text-shadow: 2px 2px 5px #000;
 }
