--- a/Work.css
+++ b/Work.css
@@ -13,7 +13,7 @@ h1{
 
 h2{
   font-size:50px;
-  color:#8db069;
+  color:#846c54;
   text-align:center;
   margin-top:-65px;
   text-decoration: underline;
