--- a/Work.css
+++ b/Work.css
@@ -35,6 +35,7 @@ table{
 th{
 font-size:25px;
 color:#413629;
+  background-color:#A3B097;
   text-align: center;
   border: 1px solid black;
   padding:15px;
