--- a/Work.css
+++ b/Work.css
@@ -44,6 +44,7 @@ color:#413629;
 td{
 font-size:20px;
 color:#304f50;
+  background-color:#E0EAD7;
   text-align: left;
   border: 1px solid black;
   padding:15px;
