--- a/Work.css
+++ b/Work.css
@@ -22,7 +22,7 @@ p{
   text-align:left;
 font-size:30px;
   width:100%;
-  color:#304f50; 
+  color:#51584B; 
   padding-bottom: 1px;
   padding-top: 1px;
 }
