--- a/Work.css
+++ b/Work.css
@@ -7,7 +7,7 @@ h1{
   text-align:center;
   border-style: dotted dashed solid double;
   color: #9C8976; 
-  background-color: #334523;
+  background-color: #656E5E;
   text-shadow: 2px 2px 5px #000;
 }
 
