--- a/hobbies.css
+++ b/hobbies.css
@@ -15,7 +15,7 @@ h1{
 h2{
   font-size:40px;
   font-family: Arial, Helvetica, sans-serif;
-  color:#846c54;
+  color:#ea528f;
   text-align:center;
   margin-top:-65px;
   padding-top:10px;
