--- a/Work.css
+++ b/Work.css
@@ -6,7 +6,7 @@ h1{
   font-size:100px; 
   text-align:center;
   border-style: dotted dashed solid double;
-  color: #9C8976; 
+  color: #413629; 
   background-color: #656E5E;
   text-shadow: 2px 2px 5px #000;
 }
