--- a/mystyle.css
+++ b/mystyle.css
@@ -14,7 +14,7 @@ h1{
 
 h2{
   font-size:50px;
-  color:#5d886c;
+  color:#24698f;
   text-align:center;
   margin-top:-65px;
   text-shadow: 2px 2px 5px #000;
