--- a/Work.css
+++ b/Work.css
@@ -8,12 +8,12 @@ h1{
   border-style: dotted dashed solid double;
   color: #9ab979; 
   background-color: #656E5E;
-  text-shadow: 2px 2px 5px #000;
+  text-shadow: 2px 2px 5px #FFF;
 }
 
 h2{
   font-size:50px;
-  color:#846c54;
+  color:#4d6435;
   text-align:center;
   margin-top:-65px;
   text-decoration: underline;
