--- a/hobbies.css
+++ b/hobbies.css
@@ -21,6 +21,15 @@ h2{
   padding-top:10px;
 }
 
+h3{
+  font-size:30px;
+  font-family: Arial, Helvetica, sans-serif;
+  color:#76515E;
+  text-align:center;
+  margin-top:-65px;
+  padding-top:10px;
+}
+
 iframe{ 
    display:block;
    margin:0 auto;
