--- a/hobbies.css
+++ b/hobbies.css
@@ -24,7 +24,7 @@ h2{
 h3{
   font-size:30px;
   font-family: Arial, Helvetica, sans-serif;
-  color:#76515E;
+  color:#a27686;
   text-align:center;
   padding-top:5px;
 }
