--- a/hobbies.css
+++ b/hobbies.css
@@ -26,7 +26,7 @@ h3{
   font-family: Arial, Helvetica, sans-serif;
   color:#a27686;
   text-align:center;
-  margin-top:10px;
+  padding-bottom:10px;
 }
 
 iframe{ 
