--- a/mystyle.css
+++ b/mystyle.css
@@ -17,7 +17,7 @@ h2{
   color:#3e5b48;
   text-align:center;
   margin-top:-65px;
-  text-shadow: 2px 2px 5px #000;
+  text-shadow: 2px 2px 5px #FFF;
   font-family: Impact, Charcoal, sans-serif;	
 }
 
