--- a/mystyle.css
+++ b/mystyle.css
@@ -6,7 +6,7 @@ h1{
   font-size:100px; 
    text-align:center;
   border-style: dashed;
-  color: #113244;
+  color: #293d30;
   background-color: #70c2b6;
   text-shadow: 2px 2px 5px #FFF;
   font-family: Impact, Charcoal, sans-serif;
