--- a/photos.css
+++ b/photos.css
@@ -2,6 +2,8 @@ p{
 font-size:30px;
 }
 <style>
+<div class="clearfix"></div> 
+<div style="padding:6px;">
 div.gallery {
   border: 1px solid #ccc;
 }
