--- a/photos.css
+++ b/photos.css
@@ -3,6 +3,10 @@ font-size:30px;
 }
 
 <style>
+
+background-image: url("https://cdn.pixabay.com/photo/2017/06/13/13/51/marble-2398946__340.jpg");
+  background-color: #cccccc;
+
 <div class="clearfix"></div> 
 <div style="padding:6px;">
 div.gallery {
