--- a/photos.css
+++ b/photos.css
@@ -2,10 +2,11 @@ p{
 font-size:30px;
 }
 
-<style>
-
 background-image: url("https://cdn.pixabay.com/photo/2017/06/13/13/51/marble-2398946__340.jpg");
   background-color: #cccccc;
+}
+
+<style>
 
 <div class="clearfix"></div> 
 <div style="padding:6px;">
