--- a/photos.css
+++ b/photos.css
@@ -4,6 +4,7 @@ font-size:30px;
 
 <style>
 
+body{
 background-image: url("https://cdn.pixabay.com/photo/2017/06/13/13/51/marble-2398946__340.jpg");
   background-color: #cccccc;
 }
