--- a/photos.css
+++ b/photos.css
@@ -1,5 +1,6 @@
 p{
 font-size:30px;
+font-family: Arial, Helvetica, sans-serif;
 }
 
 <style>
@@ -8,9 +9,6 @@ font-size:30px;
 <div style="padding:6px;">
 div.gallery {
   border: 1px solid #ccc;
-  background-image: url("https://cdn.pixabay.com/photo/2017/06/13/13/51/marble-2398946__340.jpg");
-  background-color: #cccccc;
-}
 }
 
 div.gallery:hover {
@@ -20,6 +18,8 @@ div.gallery:hover {
 div.gallery img {
   width: 100%;
   height: auto;
+  background-image: url("https://cdn.pixabay.com/photo/2017/06/13/13/51/marble-2398946__340.jpg");
+  background-color: #cccccc;
 }
 
 div.desc {
