--- a/photos.css
+++ b/photos.css
@@ -9,10 +9,14 @@ font-family: Arial, Helvetica, sans-serif;
 <div style="padding:6px;">
 div.gallery {
   border: 1px solid #ccc;
+  background-image: url("https://cdn.pixabay.com/photo/2017/06/13/13/51/marble-2398946__340.jpg");
+  background-color: #cccccc;
 }
 
 div.gallery:hover {
   border: 1px solid #777;
+  background-image: url("https://cdn.pixabay.com/photo/2017/06/13/13/51/marble-2398946__340.jpg");
+  background-color: #cccccc;
 }
 
 div.gallery img {
@@ -26,10 +30,14 @@ div.desc {
   padding: 15px;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
+  background-image: url("https://cdn.pixabay.com/photo/2017/06/13/13/51/marble-2398946__340.jpg");
+  background-color: #cccccc;
 }
 
 * {
   box-sizing: border-box;
+  background-image: url("https://cdn.pixabay.com/photo/2017/06/13/13/51/marble-2398946__340.jpg");
+  background-color: #cccccc;
 }
 
 .responsive {
