--- a/photos.css
+++ b/photos.css
@@ -24,6 +24,7 @@ div.desc {
   padding: 15px;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
+  background-color:#b19cd9;
 }
 
 * {
