--- a/photos.css
+++ b/photos.css
@@ -24,7 +24,7 @@ div.desc {
   padding: 15px;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
-  background-color:#b19cd9;
+  background-color:#e4cbfe;
 }
 
 * {
