--- a/photos.css
+++ b/photos.css
@@ -23,6 +23,7 @@ div.gallery img {
 div.desc {
   padding: 15px;
   text-align: center;
+  color:#6304c8;
   font-family: Arial, Helvetica, sans-serif;
   background-color:#e4cbfe;
 }
