--- a/photos.css
+++ b/photos.css
@@ -23,7 +23,7 @@ div.gallery img {
 div.desc {
   padding: 15px;
   text-align: center;
-  color:#4a0396;
+  color:#441476;
   font-family: Arial, Helvetica, sans-serif;
   background-color:#e4cbfe;
 }
