--- a/photos.css
+++ b/photos.css
@@ -24,6 +24,7 @@ div.desc {
   padding: 15px;
   text-align: center;
   color:#441476;
+  text-shadow: 2px 2px black;
   font-family: Arial, Helvetica, sans-serif;
   background-color:#e4cbfe;
 }
