--- a/photos.css
+++ b/photos.css
@@ -9,6 +9,7 @@ font-family: Arial, Helvetica, sans-serif;
 <div style="padding:6px;">
 div.gallery {
   border: 1px solid #ccc;
+  background-color:#EEDDFF;
 }
 
 div.gallery:hover {
