--- a/photos.css
+++ b/photos.css
@@ -25,7 +25,7 @@ div.gallery img {
 div.desc {
   padding: 15px;
   text-align: center;
-  color:#441476;
+  color:#2D0555;
   font-family: Arial, Helvetica, sans-serif;
   background-color:#e4cbfe;
 }
