--- a/Work.css
+++ b/Work.css
@@ -2,6 +2,11 @@ body{
 background-color:#ccdcbc;
 }
 
+p{
+font-size:20px;
+display: inline-block;
+}
+
 h1{ 
   font-size:100px; 
   text-align:center;
